Implemented parse line function (still needs to be tested)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,6 @@ project(cache_simulator)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(cache_simulator main.cpp
+add_executable(cache_simulator
         CacheSim.h
         CacheSim.cpp)
