--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,5 @@ set(CMAKE_CXX_STANDARD 17)
 
 add_executable(cache_simulator
         CacheSim.h
-        CacheSim.cpp)
+        CacheSim.cpp
+        main.cpp)
